# deck-cards-api

./: .env.example  Cargo.toml  README.md  docker-compose.yml  test_api.sh
src/: database.rs  main.rs  migration.rs
src/handlers/: card_handlers.rs  deck_handlers.rs  mod.rs
src/models/: card.rs  deck.rs  mod.rs
