[package]
name = "deck-cards-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }

# Database ORM
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenvy = "0.15"

# HTTP client for testing
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"

# UUID support
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
